change captions' format

--- a/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -12,7 +12,7 @@
         \begin{minipage}{0.48\textwidth}
             \begin{flushleft}
                 \begin{table}[H]
-                    \caption{\textbf{Table 1.2} The IP addresses of the hosts}
+                    \caption{The IP addresses of the hosts (Table~1.2)}
                     \centering
                     \begin{tabular}{ c c c }
                         \hline \hline
@@ -55,7 +55,7 @@
                         \draw (h6) -- (s);
                         \draw (h7) -- (s);
                     \end{tikzpicture}
-                    \caption{\textit{Figure 1.3} A single segment network}        
+                    \caption{A single segment network (Figure~1.3)}
                 \end{figure}
             \end{flushright}
         \end{minipage}
