--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -12,7 +12,7 @@
         \begin{minipage}{0.48\textwidth}
             \begin{flushleft}
                 \begin{table}[H]
-                    \caption{\textit{Table 1.2} The IP addresses of the hosts}
+                    \caption{The IP addresses of the hosts (Table~1.2)}
                     \centering
                     \begin{tabular}{ c c c }
                         \hline \hline
@@ -55,7 +55,7 @@
                         \draw (h6) -- (s);
                         \draw (h7) -- (s);
                     \end{tikzpicture}
-                    \caption{\textit{Figure 1.3} A single segment network}        
+                    \caption{A single segment network (Figure~1.3)}        
                 \end{figure}
             \end{flushright}
         \end{minipage}
@@ -228,7 +228,7 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
                 \node at ({-1+(3+0.25)*2},2) {\scriptsize 128.238.64.0 subnet};
                 \node at ({-1+(3+0.25)*2},1) {\scriptsize 128.238.65.0 subnet};
             \end{tikzpicture}
-        \caption{\textit{Figure 2.9} Network configuration}
+        \caption{Network configuration (Figure~2.9)}
     \end{figure}
     
     \begin{report}
@@ -293,7 +293,7 @@ socket -i -u -n1 -w1000 remote-host 88888
     For the next two exercises, we use only four host from single segment network (Fig 1.3).
 
     \begin{table}[H]
-        \caption{\textit{Table 2.3.} Host IP addresses and network masks for \textit{11 Duplicate IP}}
+        \caption{Host IP addresses and network masks for \textit{11 Duplicate IP (Table~2.3.)}}
         \centering
         \begin{tabular}{ c c c c }
             \hline \hline
@@ -355,7 +355,7 @@ socket -i -u -n1 -w1000 remote-host 88888
     To avoid confusion, only one machine in each group should generate traffic in each case.
     Clearly, this exercise has to be performed as a team.
     \begin{table}[H]
-        \caption{\textit{Table 2.4.} Host IP addresses and network masks for \textit{12 IP subnet}}
+        \caption{Host IP addresses and network masks for \textit{12 IP subnet (Table~2.4.)}}
         \centering
         \begin{tabular}{ c c c }
             \hline \hline
