--- a/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
+++ b/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
@@ -49,7 +49,7 @@
             \draw (router) +(-1,0.2) node {\scriptsize\textit{eth0}};
             \draw (router) +(1,0.2) node {\scriptsize\textit{eth1}};
         \end{tikzpicture}
-        \caption{\textit{Figure 3.7} Using a transparent bridge}
+        \caption{Using a transparent bridge (Figure~3.7)}
     \end{figure}
 
 % ignore excersise 1 from book
@@ -156,7 +156,7 @@ Ctrl+Z
             ;
         \end{tikzpicture}
         }
-        \caption{\textit{Figure 3.4} BPDU message format}
+        \caption{BPDU message format (Figure~3.4)}
         {\footnotesize The numbers indicate the field length in byte.}
     \end{figure}
 
@@ -233,7 +233,7 @@ Ctrl+Z
             \draw[thick] (-3,2) -- +(6,0);
             \draw[thick] (-3.5,-2) -- +(7,0);
         \end{tikzpicture}
-        \caption{\textit{Figure 3.8} Bridge experiment network}
+        \caption{Bridge experiment network (Figure~3.8)}
     \end{figure}
 
 \section{Multi Bridge Path}
