--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -39,7 +39,7 @@
             \draw[thick] (hub1) -- (router);
             \draw[thick] (hub2) -- (router);
         \end{tikzpicture}
-        \caption{\textit{Figure 4.10} Simple router experiment}
+        \caption{Simple router experiment (Figure~4.10)}
     \end{figure}
 
 \section{Simple Routing}
@@ -164,7 +164,7 @@ Router(config)# no router rip
             \draw[thick] (-3,2) -- +(6,0) node[pos=0.5,below] {\scriptsize 128.238.61.0 subnet};
             \draw[thick] (-3.5,-2) -- +(7,0) node[pos=0.5,above] {\scriptsize 128.238.63.0 subnet};
         \end{tikzpicture}
-        \caption{\textit{Figure 4.11} Network Configuration for RIP exercises}
+        \caption{Network Configuration for RIP exercises (Figure~4.11)}
     \end{figure}
 \section{RIP Messages}
     Connect the routers and hosts and change the IP addresses of the workstations and router4 as shown in Figure 4.11.
@@ -279,7 +279,7 @@ tcpdump -x -s 100 -c 4 udp port 520
             \draw (h6) -- (s1);
             \draw (h7) -- (s1);
         \end{tikzpicture}
-        \caption{\textit{Figure 4.12} Network configuration of the ICMP router discovery experiment}        
+        \caption{Network configuration of the ICMP router discovery experiment (Figure~4.12)}        
     \end{figure}
     
     Telnet to the routers, change the IP address of the \textit{ethernet1} interfaces as shown in Fig. 4.12. Enable ICMP router discovery on these two interfaces by the following
@@ -390,7 +390,7 @@ Router(config-router)# network address wildcard-mask area area-id
             \draw[thick] (-3,2) -- +(6,0) node[pos=0.5,below] {\scriptsize 128.238.65.0 subnet};
             \draw[thick] (-3.5,-2) -- +(7,0) node[pos=0.5,above] {\scriptsize 128.238.63.0 subnet};
         \end{tikzpicture}
-        \caption{\textit{Figure 4.13} Network Configuration for OSPF exercises, static routing experiments and \lstinline{traceroute} experiment}
+        \caption{Network Configuration for OSPF exercises, static routing experiments and \lstinline{traceroute (Figure~4.13)} experiment}
     \end{figure}
 
 \section{OSPF Messages}
