--- a/5 UDP and its applications/UDP and its applications.tex
+++ b/5 UDP and its applications/UDP and its applications.tex
@@ -34,7 +34,7 @@
         
             \draw (h0) -- (hub) -- (h1);
         \end{tikzpicture}
-        \caption{\textit{Figure 5.0.} Simple router experiment.}        
+        \caption{Simple router experiment. (Figure~5.0.)}        
         \label{fig:5.0}
     \end{figure}
 
@@ -125,7 +125,7 @@ socket -i -u -n10 -w1200 -p5 remote-host 5555
     \end{lstlisting}
 
     \begin{table}[H]
-        \caption{\textit{Table 5.2} Router and Host IP addresses for \autoref{fig:5.2}}
+        \caption{Router and Host IP addresses for \autoref{fig:5.2 (Table~5.2)}}
         \centering
         \begin{tabular}{ *2c|*2c|*2c }
             \hline \hline
@@ -151,7 +151,7 @@ socket -i -u -n10 -w1200 -p5 remote-host 5555
             \draw[thick] (hub1) -- (router);
             \draw[thick] (hub2) -- (router);
         \end{tikzpicture}
-        \caption{\textit{Figure 5.2.} The network setup for Exercise 6 like Simple Routing section in previous chapter}
+        \caption{The network setup for Exercise 6 like Simple Routing section in previous chapter (Figure~5.2.)}
         \label{fig:5.2}
     \end{figure}
 
