--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -13,7 +13,7 @@
     \begin{minipage}{0.48\textwidth}
         \begin{flushleft}
             \begin{table}[H]
-                \caption{\textit{Table 1.2} The IP addresses of the hosts}
+                \caption{The IP addresses of the hosts (Table~1.2)}
                 \label{tbl:1.2}
                 \centering
                 \begin{tabular}{ c c c }
@@ -57,7 +57,7 @@
                     \draw (h6) -- (s);
                     \draw (h7) -- (s);
                 \end{tikzpicture}
-                \caption{\textit{Figure 1.3} A single segment network}
+                \caption{A single segment network (Figure~1.3)}
                 \label{fig:fig13}
             \end{figure}
         \end{flushright}
@@ -160,7 +160,7 @@ netspyd 224.111.111.111 1500 1
     In the following exercises, use four hosts and one router. The network topology is given in Fig. 7.13, and the corresponding host IP addresses and router IP addresses are given in Table 7.2 and Table 7.3, respectively.
 
     \begin{table}[H]
-        \caption{\textit{Table 7.2.} Hosts IP addresses for Fig. 7.13}
+        \caption{Hosts IP addresses for Fig. 7.13 (Table~7.2.)}
         \label{tbl:7.2}
         \centering
         \begin{tabular}{ *3c }
@@ -176,7 +176,7 @@ netspyd 224.111.111.111 1500 1
     \end{table}
 
     \begin{table}[H]
-        \caption{\textit{Table 7.3.} Router IP addresses for Fig. 7.13}
+        \caption{Router IP addresses for Fig. 7.13 (Table~7.3.)}
         \label{tbl:7.3}
         \centering
         \begin{tabular}{ *3c }
@@ -206,7 +206,7 @@ netspyd 224.111.111.111 1500 1
             \draw[thick] (4.5,0) -- (router);
             \draw[thick] (-4.5,0) -- (router);
         \end{tikzpicture}
-        \caption{\textit{Figure 7.13.} The network topology for the exercises in Section 7.5.}
+        \caption{The network topology for the exercises in Section 7.5. (Figure~7.13.)}
         \label{fig:7.13}
     \end{figure}
 
@@ -342,7 +342,7 @@ Router(interface)# ip igmp join-group 224.0.0.2
             \draw[thick] (4-0.5,-1) -- +(1,0);
             \draw[thick] (7-1.5,-1) -- +(3,0);
         \end{tikzpicture}
-        \caption{\textit{Figure 7.14} The network topology for Multicast exercises}
+        \caption{The network topology for Multicast exercises (Figure~7.14)}
         \label{fig:7.14}
     \end{figure}
 
