--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -124,7 +124,7 @@ User-Agent: HTTPTool/1.0
                         \draw (h6) -- (s);
                         \draw (h7) -- (s);
                     \end{tikzpicture}
-                    \caption{\textit{Figure 1.3} A single segment network}
+                    \caption{A single segment network (Figure~1.3)}
                     \label{fig:1.3}   
                 \end{figure}
             \end{flushright}
@@ -203,7 +203,7 @@ host h5 {
         \begin{minipage}{0.48\textwidth}
             \begin{flushleft}
                 \begin{table}[H]
-                    \caption{\textit{Table 1.2} The IP addresses of the hosts}
+                    \caption{The IP addresses of the hosts (Table~1.2)}
                     \centering
                     \begin{tabular}{ c c c }
                         \hline \hline
@@ -341,7 +341,7 @@ date -r file-name
             \draw[thick] (-2-0.5,1) -- +(2*2+1,0) node[pos=0.5,above] {Internet};
             \draw[thick] (-6+0.5,-1) -- +(6*2-1,0) node[pos=0,above,anchor=south west] {Private Network};
         \end{tikzpicture}
-        \caption{\textit{Figure 8.7.} The network configuration for the NAT exercises}
+        \caption{The network configuration for the NAT exercises (Figure~8.7.)}
         \label{fig:8.7}
     \end{figure}
 
